--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,9 +17,11 @@ header {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  
+
   @media (max-width: @mobile) {
     background: url("../img/woman-weightlifting-min.jpg");
+    background-attachment: fixed;
+    background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
